--- a/esg-chain-website/src/app/globals.css
+++ b/esg-chain-website/src/app/globals.css
@@ -3,31 +3,15 @@
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+  --primary-color: #F5F5F5;
+  --secondary-color: #FFFFFF;
+  --tertiary-color: #629C9E;
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
-
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+  font-family: 'Roboto', sans-serif;
+  background-color: var(--primary-color);
+  font-size: 16px;
+  line-height: 1.5;
+  color: #333;
 }
